# StringBender

./: .coverage  .editorconfig  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  HISTORY.md  LICENSE  README.md  makefile  mypy.ini  poetry.toml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: code-check.yml  publish-to-pypi.yml
scripts/: _lib.ps1  setup-project.ps1
src/stringbender/: __init__.py  decorate.py
src/superstring/: __init__.py  decorate.py
test/unit/: test_convenience_methods.py  test_string.py  test_string_overrides.py
